-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.7, 5.8
-
None
-
0375890c48223f0b7d400b6abaa338c6f44796d1 (qt/qtwebengine/5.15)
If an HTML canvas element is larger than 256*256 and it has a background defined in CSS, it turns to black when modifying its context.
How to reproduce:
1.) Open the attached example
2.) Press "Draw" buttons
Result: The largest canvas fails to render its blue background.