Expose WebPreferences::disable_features_depending_on_viz

Normally only defined on Android, but we need it too.

Task-number: QTBUG-56147
Change-Id: Ibe9f433011524c894045a294117f8f9d1d9b1a1e
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>