chromium/content/renderer/render_view_impl.cc
@@ -854,8 +854,12 @@ void RenderView::ApplyWebPreferences(const WebPreferences& prefs,
   WebRuntimeFeatures::EnableCSSHexAlphaColor(prefs.css_hex_alpha_color_enabled);
   WebRuntimeFeatures::EnableScrollTopLeftInterop(
       prefs.scroll_top_left_interop_enabled);
+#endif
+#if defined(OS_ANDROID) || defined(TOOLKIT_QT)
   WebRuntimeFeatures::EnableSurfaceEmbeddingFeatures(
       !prefs.disable_features_depending_on_viz);
+#endif
+#if defined(OS_ANDROID)
   WebRuntimeFeatures::EnableAcceleratedSmallCanvases(
       !prefs.disable_accelerated_small_canvases);
   if (prefs.reenable_web_components_v0) {
